<resources>
    <string name="app_name">NeighbourFeed</string>
    <string name="tagline">Your neighborhood, your feed</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="click_to_register">Don\'t have an account? Register</string>
    <string name="click_to_login">Already have an account? Login</string>
    <string name="filter">Filter</string>
    <string name="create_a_new_post">Create a new post</string>
    <string name="new_post_label">New Post</string>
    <string name="profile">Profile</string>
    <string name="distance_seekbar">Distance</string>
    <string name="km">%d km</string>
    <string name="this_is_a_post_text">This is a post text</string>
    <string name="post_image">Post Image</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="comment">Comment</string>
    <string name="comment_count">0</string>
    <string name="total_count">0</string>
    <string name="downs">-</string>
    <string name="ups">+</string>
    <string name="comments">Comments</string>
    <string name="posts">Posts</string>
    <string name="email_or_username">Email or Username</string>
    <string name="back">Back</string>
    <string name="add_comment_hint">Write a comment…</string>
    <string name="add_comment_button">Send</string>
    <string name="play_pause">Play / Pause</string>
    <string name="current_time">0:00</string>
    <string name="take_photo">Camera</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="enter_your_post_text_here">What\'s happening in your neighborhood?</string>
    <string name="start_recording">Record Audio</string>
    <string name="control_location">Control Location</string>
    <string name="add_post">Share Post</string>
    <string name="userLayoutTextHeader">Activity</string>
    <string name="open_map">Open Map</string>
    <string name="created_at">dd/MM/yyyy HH:mm</string>
    <string name="no_posts">No Posts</string>
    <string name="create_post_title">Create Post</string>
    <string name="post_detail_title">Post</string>
    <string name="comments_title">Comments</string>
</resources>
